# sphinx-click

./: setup.cfg
sphinx_click/: ext.py
