[metadata]
name = sphinx-click-freckles
summary = Sphinx extension by Stephen Finucane that automatically documents click applications, with additions used to generate 'freckles' documentation
description-file = README.rst
license = MIT License
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = sphinx
author = Markus Binsteiner
author-email = makkus@frkl.io
home-page = https://github.com/makkus/sphinx-click
project-url = https://that.guru/

[files]
packages =
    sphinx_click

[build_sphinx]
all-files = 1
warning-is-error = 1
build-dir = docs/_build
source-dir = docs
builders = html

[wheel]
universal = 1
